--- a/new1.html
+++ b/new1.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DuAn3</title>
+    <title>UpdateThemDuan</title>
   </head>
   <body>
-    <h1>Dự án 3</h1>
-    <h2>Sửa đổi lần 2</h2>
-    <h1>sửa đổi lần 3</h1>
-    <hr />
+    <h1><u>Cập nhật thêm vào dự án</u></h1>
   </body>
 </html>
